<resources>
    <string name="app_name">Nihon Tai Jitsu</string>
    <string name="back_home_sentence">Echouer, c\'est avoir la possibilité de recommencer de manière plus intelligente</string>
    <string name="i_restart">Je recommence</string>

    <string name="action_about">A propos</string>
    <string name="action_about_copyright">v%1$s - 2022 copyleft - Idée : Anne Sophie Luypaerts - Contenu : Fédération NTJ - Dev : Norbert Martin</string>
    <string name="action_about_data">Utilisation des données</string>
    <string name="action_about_data_warn">Les réponses avec contenu multimédia consomment des data, selon votre situation des frais peuvent s\'appliquer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_label">Dojo</string>
    <string name="question_label">Question</string>
    <string name="continue_label">Persévérer</string>
    <string name="answer_label">Answer</string>

    <string name="home_workout_title">Révision hors du dojo</string>
    <string name="home_invalid_level">Choisis le niveau préparé</string>
    <string name="home_invalid_work_type">Choisis pratique, théorie ou les 2</string>
    <string name="home_no_revision_available">Oups, aucun contenu disponible pour réviser</string>
    <string name="home_invalid_unlock_code">Ce n\'est pas le bon code, essaies plutôt via l\'app EFNTJ.</string>
    <string name="keep_screen_on">Empêcher la veille de l\'écran</string>
    <string name="home_goTraining">C\'est parti !</string>
    <string-array name="belts">
        <item name="level">Quelle ceinture prépares-tu ?</item>
        <item name="yellow">Ceinture jaune</item>
        <item name="orange">Ceinture orange</item>
        <item name="green">Ceinture verte</item>
        <item name="blue">Ceinture bleue</item>
        <item name="brown">Ceinture marron</item>
        <item name="black">Ceinture noire</item>
    </string-array>
    <string-array name="work_types">
        <item name="level">Que souhaites-tu travailler ?</item>
        <item name="practice">La pratique</item>
        <item name="theory">La théorie</item>
        <item name="both">La pratique et la théorie</item>
    </string-array>

    <string name="question_next">Question suivante</string>
    <string name="question_see_answer">Voir la réponse</string>
    <string name="question_no_answer_available">Pas de réponse disponible, il faut aller chercher par toi-même</string>

    <string name="continue_training">Une ceinture noire est une ceinture blanche qui n\'a jamais abandonné</string>
    <string name="training_practice_warning">Cette application est un aide mémoire, il est nécessaire de pratiquer sous la responsabilité d\'un enseignant diplômé.</string>
    <string name="unlock_code">Code déverrouillage</string>
    <string name="unlock_process">Déverrouilles l\'accès au contenu depuis l\'application EFNTJ.</string>
    <string name="validate">Valider</string>
    <string name="continue_training_see_you_soon">A bientôt</string>
    <string name="continue_training_congrats">Bravo révision terminée !</string>
    <string name="offline_warn">\u26A0 HORS LIGNE \u26A0\ncertaines réponses seront inaccessibles</string>
    <string name="see_media_out">Voir hors de l\'application</string>
    <string name="content_unlocked">Bravo, contenu déverrouillé, maintenant au boulot !</string>
    <string name="content_availability">Contenu déverrouillé jusqu\au : %1$s</string>

</resources>